[gd_scene load_steps=4 format=3 uid="uid://cshotpanel1"]

[ext_resource type="Script" uid="uid://cshotpanelscript1" path="res://scripts/ui/shot_panel.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://c7swing_slot1" path="res://scenes/ui/swing_card_slot.tscn" id="2_swing_slot"]
[ext_resource type="PackedScene" uid="uid://c8j2k3l4m5n6" path="res://scenes/ui/deck_widget.tscn" id="3_deck_widget"]

[node name="ShotPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_script")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SwingCardSlot" parent="HBoxContainer" instance=ExtResource("2_swing_slot")]
layout_mode = 2

[node name="ModifierDeck" parent="HBoxContainer" instance=ExtResource("3_deck_widget")]
custom_minimum_size = Vector2(160, 200)
layout_mode = 2

[node name="SpinMeterContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(60, 200)
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="TopLabel" type="Label" parent="HBoxContainer/SpinMeterContainer"]
layout_mode = 2
text = "Top"
horizontal_alignment = 1

[node name="TopSpinSlider" type="VSlider" parent="HBoxContainer/SpinMeterContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 4
min_value = -1.0
max_value = 1.0
step = 0.1

[node name="NoneLabel" type="Label" parent="HBoxContainer/SpinMeterContainer"]
layout_mode = 2
text = "None"
horizontal_alignment = 1

[node name="BackSpinSlider" type="VSlider" parent="HBoxContainer/SpinMeterContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 4
min_value = -1.0
max_value = 1.0
step = 0.1

[node name="BackLabel" type="Label" parent="HBoxContainer/SpinMeterContainer"]
layout_mode = 2
text = "Back"
horizontal_alignment = 1

